--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,10 @@
     <string name="password_label">Password</string>
     <string name="login_label">Login</string>
     <string name="logout_label">Logout</string>
-    <string name="enter_post_label">Enter Post</string>
-    <string name="create_forum">New Forum</string>
-    <string name="posts_label">Posts</string>
+    <string name="create_chat">New Chat</string>
+    <string name="chats_label">My Chats</string>
     <string name="create_account_label">Create New Account</string>
+    <string name="chat_label">Chat - </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
