--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,5 @@
     <string name="chats_label">My Chats</string>
     <string name="create_account_label">Create New Account</string>
     <string name="chat_label">Chat - </string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="me">Me</string>
 </resources>
